--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
     }
     dependencies {
-        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.5'
+        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
@@ -15,11 +17,11 @@ allprojects {
     version = '1.0'
     ext {
         appName = 'QuadTree'
-        gdxVersion = '1.4.1'
-        roboVMVersion = '1.0.0-alpha-04'
-        box2DLightsVersion = '1.2'
-        ashleyVersion = '1.3.1'
-        aiVersion = '1.4.0'
+        gdxVersion = '1.6.1'
+        roboVMVersion = '1.2.0'
+        box2DLightsVersion = '1.3'
+        ashleyVersion = '1.4.0'
+        aiVersion = '1.5.0'
     }
 
     repositories {
@@ -37,6 +39,20 @@ project(":desktop") {
         compile project(":core")
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    }
+}
+
+project(":android") {
+    apply plugin: "android"
+
+    configurations { natives }
+
+    dependencies {
+        compile project(":core")
+        compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
+        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
     }
 }
 
